--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p class="name">Latha S</p>
             <p class="src"></p>
             <p class="desc">front end develper</p>
+            <p>i m learner</p>
         </div>
         </div>
     </div>
